Fixed bugs that were discovered using FindBugs.